--- a/src/components/SearchButton/styles.module.css
+++ b/src/components/SearchButton/styles.module.css
@@ -4,11 +4,11 @@
   border: 0;
   color: var(--ifm-link-color);
   cursor: pointer;
-  display: flex;
-  font-family: inherit;
-  font-size: 1rem;
+  /* display: flex; */
+  /* font-family: inherit; */
+  /* font-size: 1rem; */
   padding: 0;
-  transition: color var(--ifm-transition-fast) var(--ifm-transition-timing-default);
+  transition: none;
 }
 
 .button:hover {
