--- a/src/css/ams-overrides.css
+++ b/src/css/ams-overrides.css
@@ -1,24 +1,5 @@
+/* There is also 2 overrides in src/theme/Navbar/Layout/styles.module.css */
 /* Fix for ams-design-system mobile menu button breakpoint misalignment with docusaurus breakpoints */
-@media screen and (min-width: 36rem) {
-  .ams-header__links {
-    display: none !important;
-  }
-
-  .ams-header__menu {
-    display: block;
-  }
-}
-
-@media screen and (min-width: 997px) {
-  .ams-header__links {
-    display: block !important;
-  }
-
-  .ams-header__menu {
-    display: none;
-  }
-}
-
 .main-wrapper .ams-screen {
   width: 100%;
 }
@@ -35,9 +16,9 @@
   background-color: var(--ifm-navbar-background-color);
 }
 
-[data-theme='dark'] .ams-heading {
+/* [data-theme='dark'] .ams-heading {
   color: #fff;
-}
+} */
 
 [data-theme='dark'] .ams-header__menu-button {
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><path fill='%23ffffff' fill-rule='evenodd' d='M0 3.238h32V7.81H0V3.238zm0 10.476h32v4.572H0v-4.572zM0 24.19h32v4.572H0V24.19z'/></svg>");
@@ -45,7 +26,6 @@
 }
 
 [data-theme='dark'] .ams-page-menu__link,
-
 [data-theme='dark'] .ams-card__image {
   filter: invert(1) hue-rotate(180deg) brightness(1.2);
 }
@@ -80,5 +60,5 @@
 
 [data-theme='dark'] .ams-button--primary:hover {
   background-color: #E8E8E8 !important;
-  box-shadow: none !important; 
+  box-shadow: none !important;
 }
