--- a/src/css/doc-overrides.css
+++ b/src/css/doc-overrides.css
@@ -1,3 +1,7 @@
+a {
+  transition: none;
+}
+
 .col {
   padding: 0;
 }
