--- a/src/theme/Navbar/Layout/styles.module.css
+++ b/src/theme/Navbar/Layout/styles.module.css
@@ -20,3 +20,7 @@
 .navbar :global(.ams-page-header) {
   padding-inline: 0;
 }
+
+.navbar :global(.navbar-sidebar) {
+  z-index: calc(var(--ifm-z-index-fixed) + 1);;
+}
